# fileseq

./: .appveyor.yml  .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.md  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: Makefile  api.rst  conf.py  grammar.rst  index.rst  make.bat  usage.rst
scripts/: generate.py
src/: test.py
src/fileseq/: __init__.py  all.py  constants.py  exceptions.py  filesequence.py  filesequence.py.rej  frameset.py  utils.py
src/fileseq/_vendor/: __init__.py
src/fileseq/_vendor/antlr4/: Recognizer.py
src/fileseq/_vendor/antlr4/atn/: ATNDeserializer.py  ParserATNSimulator.py
src/fileseq/_vendor/antlr4/xpath/: XPathLexer.py
src/fileseq/grammar/: fileseq.g4  generate.py
src/fileseq/parser/: __init__.py  fileseqLexer.py  fileseqListener.py  fileseqParser.py  fileseqVisitor.py  fileseq_visitor_impl.py  parse.py  parse_postprocess.py  parse_result.py  sequence_parser.py
test/: pytest.ini  run.py  test.py  test_fuzz.py  test_unit.py  utils.py
